# Feature-Selection-solving-the-problem-and-application-to-signal-processing

./: .gitignore  README.md  pyproject.toml
Matlab/: sigmoid.m
Notes/: meeting2.txt
app/: buckets.py  config.json  main.py  mainSolve.py
app/Archive/: LoadData.py
app/MLModels/: HeavyModelSVM.py
app/OptimizationAlgorithm/: EvolutionaryAlgorithm.py  SimulatedAnnealing.py
app/Problem/: DataLoader.py  Individual.py  Problem.py
app/Results/SAParameters/: SAParameters_Best_Initial_Temperature.csv  SAParameters_Best_Initial_Temperature_old.csv
app/Tests/: CX.py  Inversion.py  OX.py  PMX.py  Swap.py  TestSA.py  TestSVM.py  Tournament.py
app/Utilities/: BestRunnerSAEA.py  ComparisonRunner.py  ConfigLoader.py  EAConvergence.py  EALogger.py  EAParameters.py  SAParameters.py  SAParameters_champion.py  amdecoder.py
app/differential_evolution/: algorithm.py
